5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1671_1079.log
== TEST (2019-04-24 13:19:22) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

if (abs(b-c)<a<(b+c)):
	
	if (a + b) > c
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(Area,3)
	print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 8
    if (a + b) > c
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:23:43) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, "," b, ",", c)

if (abs(b-c)<a<(b+c)):
	
	if (a + b) > c
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(Area,3)
	print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 5
    print("Entradas:", a, "," b, ",", c)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 13:23:45) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, "," b, ",", c)

if (abs(b-c)<a<(b+c)):
	
	if (a + b) > c
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(Area,3)
	print("Area:" , A)
	
else:
print("Area: invalida")
-- EXECUTION TIME:
0.253482
-- ERROR:
  File "/home/codebench/codes/1671/1079/main.py", line 5
    print("Entradas:", a, "," b, ",", c)
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 13:23:58) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, "," b, "," c)

if (abs(b-c)<a<(b+c)):
	
	if (a + b) > c
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(Area,3)
	print("Area:" , A)
	
else:
print("Area: invalida")
-- EXECUTION TIME:
0.201483
-- ERROR:
  File "/home/codebench/codes/1671/1079/main.py", line 5
    print("Entradas:", a, "," b, "," c)
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:23:59) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, "," b, "," c)

if (abs(b-c)<a<(b+c)):
	
	if (a + b) > c
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(Area,3)
	print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 5
    print("Entradas:", a, "," b, "," c)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:24:17) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if (abs(b-c)<a<(b+c)):
	
	if (a + b) > c
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(Area,3)
	print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 9
    if (a + b) > c
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 13:25:37) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if (abs(b-c)<a<(b+c)):
	
	if (a + b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(Area,3)
	print("Area:" , A)
	
else:
print("Area: invalida")
-- EXECUTION TIME:
0.212544
-- ERROR:
  File "/home/codebench/codes/1671/1079/main.py", line 10
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:25:38) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if (abs(b-c)<a<(b+c)):
	
	if (a + b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(Area,3)
	print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 10
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:26:37) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if (abs(b-c)<a<(b+c)):
	
	if (a + b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(Area,3)
	print("Area:" , A)
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 10
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 13:26:37) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if (abs(b-c)<a<(b+c)):
	
	if (a + b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(Area,3)
	print("Area:" , A)
else:
print("Area: invalida")
-- EXECUTION TIME:
0.105785
-- ERROR:
  File "/home/codebench/codes/1671/1079/main.py", line 10
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:27:05) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if (abs(b-c)<a<(b+c)):
	
	if (a + b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(Area,3)
	print("Area:" , A)
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 10
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 13:27:06) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if (abs(b-c)<a<(b+c)):
	
	if (a + b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(Area,3)
	print("Area:" , A)
else:
print("Area: invalida")
-- EXECUTION TIME:
0.141327
-- ERROR:
  File "/home/codebench/codes/1671/1079/main.py", line 10
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 13:27:06) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if (abs(b-c)<a<(b+c)):
	
	if (a + b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(Area,3)
	print("Area:" , A)
else:
print("Area: invalida")
-- EXECUTION TIME:
0.114935
-- ERROR:
  File "/home/codebench/codes/1671/1079/main.py", line 10
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:27:06) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if (abs(b-c)<a<(b+c)):
	
	if (a + b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(Area,3)
	print("Area:" , A)
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 10
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 13:27:07) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if (abs(b-c)<a<(b+c)):
	
	if (a + b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(Area,3)
	print("Area:" , A)
else:
print("Area: invalida")
-- EXECUTION TIME:
0.126587
-- ERROR:
  File "/home/codebench/codes/1671/1079/main.py", line 10
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:27:07) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if (abs(b-c)<a<(b+c)):
	
	if (a + b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(Area,3)
	print("Area:" , A)
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 10
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 13:28:35) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(Area,3)
	print("Area:" , A)
else:
print("Area: invalida")
-- EXECUTION TIME:
0.140651
-- ERROR:
  File "/home/codebench/codes/1671/1079/main.py", line 10
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:28:37) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(Area,3)
	print("Area:" , A)
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 10
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:31:53) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area,3)
	print("Area:" , A)
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 10
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:32:33) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area,3)
	print("Area:" , A)
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 10
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:32:48) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 15
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:32:52) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 15
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:59:53) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 16
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:59:53) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 16
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:59:53) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 16
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:59:53) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 16
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:59:53) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 16
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:59:53) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 16
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:59:53) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 16
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:59:53) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 16
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:59:53) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 16
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:59:54) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 16
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:59:54) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 16
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:59:54) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 16
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:59:54) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 16
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:59:54) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 16
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 13:59:55) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- EXECUTION TIME:
0.190036
-- ERROR:
  File "/home/codebench/codes/1671/1079/main.py", line 16
    print("Area: invalida")
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 13:59:55) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- EXECUTION TIME:
0.164033
-- ERROR:
  File "/home/codebench/codes/1671/1079/main.py", line 16
    print("Area: invalida")
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:59:55) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 16
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 13:59:55) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- EXECUTION TIME:
0.109949
-- ERROR:
  File "/home/codebench/codes/1671/1079/main.py", line 16
    print("Area: invalida")
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:00:09) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 16
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:26:50) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if ((b-c)<a and a<(b+c)):
	
	if (a + b > c):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 16
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:29:09) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a + b > c):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 16
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:29:33) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a + b > c):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area:")
-- ERROR:
File "XXXX", line 16
    print("Area:")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:29:37) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a + b > c):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area:")
-- EXECUTION TIME:
0.132113
-- ERROR:
  File "/home/codebench/codes/1671/1079/main.py", line 16
    print("Area:")
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:30:48) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a + c > b):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 16
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:32:04) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a + c > b):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 16
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:32:16) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a + c > b):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area")
-- ERROR:
File "XXXX", line 16
    print("Area")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:32:23) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a + c > b):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print(Area)
-- ERROR:
File "XXXX", line 16
    print(Area)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:32:36) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a + c > b):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area,3)
		print("Area:" , A)
	
else:
print("Area:")
-- ERROR:
File "XXXX", line 16
    print("Area:")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:50:02) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+c > b):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 17
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:50:14) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+c > b):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: Invalida")
-- ERROR:
File "XXXX", line 17
    print("Area: Invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:50:25) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+c > b):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 17
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:50:27) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+c > b):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- EXECUTION TIME:
0.162087
-- ERROR:
  File "/home/codebench/codes/1671/1079/main.py", line 17
    print("Area: invalida")
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:50:28) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+c > b):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 17
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:50:28) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+c > b):
		s = (a + b + c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 17
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:50:41) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+c > b):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 11
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:55:40) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 11
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:55:41) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 11
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:55:41) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 11
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:55:41) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 11
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:55:41) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 11
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:55:41) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 11
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:55:41) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 11
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:55:41) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 11
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:55:41) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 11
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:55:41) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 11
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:55:41) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 11
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:55:41) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 11
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:55:41) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 11
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:55:44) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- EXECUTION TIME:
0.203544
-- ERROR:
  File "/home/codebench/codes/1671/1079/main.py", line 11
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:55:44) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 11
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:55:57) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+b > c):
	s = (a + b + c) / (2.0)
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 11
    s = (a + b + c) / (2.0)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:55:58) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+b > c):
	s = (a + b + c) / (2.0)
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- EXECUTION TIME:
0.147791
-- ERROR:
  File "/home/codebench/codes/1671/1079/main.py", line 11
    s = (a + b + c) / (2.0)
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:56:13) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+b > c):
   	s = (a + b + c) / 2.0
	   area = sqrt(s*(s-a)*(s-b)*(s-c))
   	A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 11
    s = (a + b + c) / 2.0
                        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:56:50) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+b > c):
	s = (a + b + c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area, 3)
	print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 11
    s = (a + b + c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:56:59) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+b > c):
	s = (a+b+c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area, 3)
	print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 11
    s = (a+b+c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:07:07) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+b > c):
	s = (a+b+c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area, 3)
	print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 11
    s = (a+b+c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:07:10) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+b > c):
	s = (a+b+c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area, 3)
	print("Area:" , A)
	
else:
print("Area: invalida")
-- EXECUTION TIME:
0.172145
-- ERROR:
  File "/home/codebench/codes/1671/1079/main.py", line 11
    s = (a+b+c) / 2.0
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:30:41) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+b > c):
	s = (a+b+c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area, 3)
	print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 11
    s = (a+b+c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:34:08) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+b > c):
	s = (a+b+c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area, 3)
	print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 11
    s = (a+b+c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:41:44) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	
	if (a+b > c and a+c>b and b+c>a):
	s = (a+b+c) / 2.0
	area = sqrt(s*(s-a)*(s-b)*(s-c))
	A = round(area, 3)
	print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 11
    s = (a+b+c) / 2.0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:42:14) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	if (a+b > c and a+c>b and b+c>a):
		s = (a+b+c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area, 3)
		print("Area:" , A)
	
else:
print("Area: invalida")
-- ERROR:
File "XXXX", line 16
    print("Area: invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:42:21) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	if (a+b > c and a+c>b and b+c>a):
		s = (a+b+c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area, 3)
		print("Area:" , A)
	
else:
	print("Area: invalida")
-- OUTPUT:
Entradas: -11.0 , 22.0 , 33.0
Area: invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:42:23) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	if (a+b > c and a+c>b and b+c>a):
		s = (a+b+c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area, 3)
		print("Area:" , A)
	
else:
	print("Area: invalida")
-- EXECUTION TIME:
0.216036
-- TEST CASE 1:
---- input:
-11.0
22.0
33.0
---- correct output:
Entradas: -11.0 , 22.0 , 33.0
Area: invalida
---- user output:
Entradas: -11.0 , 22.0 , 33.0
Area: invalida
-- TEST CASE 2:
---- input:
1.61
2.40
2.89
---- correct output:
Entradas: 1.61 , 2.4 , 2.89
Area: 1.932
---- user output:
Entradas: 1.61 , 2.4 , 2.89
Area: 1.932
-- TEST CASE 3:
---- input:
11.0
22.0
33.0
---- correct output:
Entradas: 11.0 , 22.0 , 33.0
Area: invalida
---- user output:
Entradas: 11.0 , 22.0 , 33.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:42:58) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	if (a+b > c and a+c>b and b+c>a):
		s = (a+b+c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area, 3)
		print("Area:" , A)
	else:
		print("Area: invalida")
	
else:
	print("Area: invalida")
-- OUTPUT:
Entradas: -11.0 , 22.0 , 33.0
Area: invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:43:00) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if (a>0 and b>0 and c>0):
	if (a+b > c and a+c>b and b+c>a):
		s = (a+b+c) / 2.0
		area = sqrt(s*(s-a)*(s-b)*(s-c))
		A = round(area, 3)
		print("Area:" , A)
	else:
		print("Area: invalida")
	
else:
	print("Area: invalida")
-- EXECUTION TIME:
0.124757
-- TEST CASE 1:
---- input:
-11.0
22.0
33.0
---- correct output:
Entradas: -11.0 , 22.0 , 33.0
Area: invalida
---- user output:
Entradas: -11.0 , 22.0 , 33.0
Area: invalida
-- TEST CASE 2:
---- input:
1.61
2.40
2.89
---- correct output:
Entradas: 1.61 , 2.4 , 2.89
Area: 1.932
---- user output:
Entradas: 1.61 , 2.4 , 2.89
Area: 1.932
-- TEST CASE 3:
---- input:
11.0
22.0
33.0
---- correct output:
Entradas: 11.0 , 22.0 , 33.0
Area: invalida
---- user output:
Entradas: 11.0 , 22.0 , 33.0
Area: invalida
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
